--- a/.gitignore
+++ b/.gitignore
@@ -25,16 +25,8 @@
 
 storage.googleapis.com
 runs/*
-data/*
-!data/samples/zidane.jpg
-!data/samples/bus.jpg
-!data/coco.names
-!data/coco_paper.names
-!data/coco.data
-!data/coco_*.data
-!data/coco_*.txt
-!data/trainvalno5k.shapes
-!data/*.sh
+
+!data/*
 
 pycocotools/*
 results*.txt
