--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,13 @@
 numpy
 opencv-python >= 4.1
 torch >= 1.4
+torchvision
+tensorboard
 matplotlib
-pycocotools
+#pycocotools
 tqdm
 pillow
+Cython
 
 # Nvidia Apex (optional) for mixed precision training --------------------------
 # git clone https://github.com/NVIDIA/apex && cd apex && pip install -v --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" . --user && cd .. && rm -rf apex
